# CDA-case1

./: .gitignore  README.md  case_workspace.ipynb  pyproject.toml
configs/: config.yaml
configs/dataset/: base.yaml
configs/logger/: wandb.yaml
configs/model/: elasticnet.yaml  ridge.yaml
configs/model/params/: elasticnet_default.yaml  ridge_default.yaml  ridge_strong.yaml
configs/preprocessing/: notscaled.yaml  scaled.yaml
configs/search/: default.yaml
notebooks/: case_workspace.ipynb
src/case1/: data.py  evaluate.py  model.py  pipeline.py  predict.py  preprocessing.py  train.py
